# FASLR

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  codecov.yml  layout_colorwidget.py  pyproject.toml  requirements.txt  scratcy_tabs.py  setup.py
.circleci/: config.yml
.github/workflows/: deploy_docs.yml  docs.yml  tests.yml
debian/: README.md  changelog  control  generate_changelog.py  rules
docs/: README.md  build_docs.sh  conf.py  index.rst
docs/_static/: favicon_instructions.md  xkcd_reserving_rotation.py
docs/api/: index.rst
docs/contributing/: index.rst  roadmap.rst
docs/db/: README.md
docs/gallery/: index.rst
docs/nginx/: README.md  faslr.com.conf
docs/user/: index.rst  install.rst
faslr/: __init__.py  __main__.py  _version.py  about.py  analysis.py  base_classes.py  base_table.py  connection.py  constants.py  core.py  country.py  data.py  engine.py  exhibit.py  factor.py  factor_demo.py  grid_header.py  ldf_dialog_demo.py  main.py  menu.py  project.py  project_item.py  pytest.ini  schema.py  settings.py  show_triangle.py  tail.py  triangle_model.py
faslr/common/: __init__.py  button.py  icon.py  menu.py  model.py  table.py  triangle.py
faslr/constants/: __init__.py  analysis.py  connection.py  development.py  diagnostics.py  expected_loss.py  general.py  model.py  role.py  settings.py  triangle.py
faslr/core/: __init__.py  application.py  core.py
faslr/demos/: about_demo.py  analysis_demo.py  arguments_demo.py  country_demo.py  data_pane_demo.py  exhibit_builder_demo.py  exhibit_demo.py  expected_loss_demo.py  sample_db.py  (+18 more)
(+139 files in other folders)
